# MiniP7

./: .gitignore  404.html  CODEOWNERS  CONTRIBUTING.md  README.md  activity.py  activity_table.py  conftest.py  db.py  export_manager.py  gantt_view.py  index.html  main_window.py  minip7.db  mkdocs.yml  models.py  p6_xml.py  package-lock.json  package.json  project_settings_dialog.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  resource_panel.py  run.bat  run.sh  scheduler.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
DOCUMENTATION_STANDARDS/: index.html
REPO_STRATEGY/: index.html
ROADMAP/: index.html
adr/: index.html
adr/0000-template/: index.html
adr/0001-monorepo/: index.html
adr/0002-dependency-rule/: index.html
adr/0003-schema-single-source-of-truth/: index.html
adr/0004-gantt-build-vs-buy/: index.html
adr/0005-multi-tenancy/: index.html
adr/0006-authentication/: index.html
adr/0007-user-preferences/: index.html
adr/0008-activity-types/: index.html
adr/0009-currency/: index.html
adr/0010-typescript-codegen-tooling/: index.html
adr/0011-typed-relationships/: index.html
adr/0012-calendars/: index.html
adr/0013-earned-value/: index.html
adr/0014-frontend-stack/: index.html
apps/api/: README.md
apps/cli/: README.md
apps/web/: README.md  index.html  package.json  tailwind.config.js  vite.config.js  vite.config.ts
architecture/ARCHITECTURE/: index.html
docs/: DOCUMENTATION_STANDARDS.md  REPO_STRATEGY.md  ROADMAP.md  index.md
search/: search_index.json
tooling/: importlinter.ini
(+68 files in other folders)
